Finished person-talk reporting.
